--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "core-js": "^2.4.1",
     "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "hamburgers": "^0.9.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
@@ -125,10 +126,13 @@
     "copy-webpack-plugin": "^4.1.0",
     "critical": "^0.9.0",
     "css-loader": "^0.25.0",
+    "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.9.0",
     "gh-pages": "^1.0.0",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.29.0",
     "imports-loader": "^0.6.5",
     "istanbul-instrumenter-loader": "^0.2.0",
@@ -152,6 +156,7 @@
     "protractor": "^5.1.2",
     "raw-loader": "^0.5.1",
     "remap-istanbul": "^0.9.5",
+    "resolve-url-loader": "^2.2.0",
     "rimraf": "^2.5.2",
     "script-ext-html-webpack-plugin": "^1.8.3",
     "source-map-loader": "^0.1.5",
@@ -168,6 +173,7 @@
     "url-loader": "^0.5.7",
     "uswds": "^0.12.1",
     "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "2.7.1",
     "webpack-md5-hash": "0.0.5",
