--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
     "@types/jasminewd2": "^2.0.2",
     "angulartics2": "1.4.3",
     "assets-webpack-plugin": "^3.4.0",
-    "bourbon": "^4.3.4",
-    "bourbon-neat": "^2.0.0",
+    "bourbon": "^4.2.7",
+    "bourbon-neat": "^1.8.0",
     "clipboard": "^1.7.1",
     "core-js": "^2.4.1",
     "cssnano": "^3.10.0",
@@ -96,6 +96,7 @@
     "ng2-page-scroll": "^4.0.0-beta.11",
     "ngx-infinite-scroll": "^0.5.1",
     "node-sass": "4.5.2",
+    "normalize.css": "^7.0.0",
     "pluralize": "^3.0.0",
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^11.0.0",
@@ -104,7 +105,7 @@
     "sass-loader": "^6.0.6",
     "typed.js": "^1.1.1",
     "typings": "^2.1.1",
-    "uswds": "^0.12.1",
+    "uswds": "^1.4.1",
     "webpack-create-file-plugin": "^0.1.0",
     "zone.js": "^0.8.12"
   },
