--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "clipboard": "^1.7.1",
     "core-js": "^2.4.1",
     "cssnano": "^3.10.0",
+    "devicons": "^1.8.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "font-awesome": "^4.7.0",
     "hamburgers": "^0.9.1",
