--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "monaco-editor": "^0.9.0",
     "ng2-page-scroll": "^4.0.0-beta.11",
     "ngx-infinite-scroll": "^0.5.1",
+    "ngx-pagination": "^3.0.3",
     "node-sass": "4.5.2",
     "normalize.css": "^7.0.0",
     "pluralize": "^3.0.0",
